@@ -12,11 +12,13 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.Authentication;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.stereotype.Component;
 
 import java.util.Base64;
 import java.util.Collections;
 import java.util.Date;
+import java.util.List;
 
 @RequiredArgsConstructor
 @Component
@@ -33,13 +35,14 @@ public class UserAuthenticationProvider {
         secretKey = Base64.getEncoder().encodeToString(secretKey.getBytes());
     }
 
-    public String createToken(String login) {
+    public String createToken(String email, String role) {
         Date now = new Date();
-        Date validity = new Date(now.getTime() + 3600000); // 1 hour
+        Date validity = new Date(now.getTime() + 7 * 24 * 60 * 60 * 1000L); // 1 week
 
         Algorithm algorithm = Algorithm.HMAC256(secretKey);
         return JWT.create()
-                .withSubject(login)
+                .withSubject(email)
+                .withClaim("role",role)
                 .withIssuedAt(now)
                 .withExpiresAt(validity)
                 .sign(algorithm);
@@ -47,15 +50,20 @@ public class UserAuthenticationProvider {
 
     public Authentication validateToken(String token) {
         Algorithm algorithm = Algorithm.HMAC256(secretKey);
-
-        JWTVerifier verifier = JWT.require(algorithm)
-                .build();
-
+        JWTVerifier verifier = JWT.require(algorithm).build();
         DecodedJWT decoded = verifier.verify(token);
 
-        UserDto user = userService.findByLogin(decoded.getSubject());
+        String hrEmail = decoded.getSubject();
+        UserDto userDto = userService.findByLogin(hrEmail);
+        userDto.setToken(decoded.getToken());
+        userDto.setRole(decoded.getClaim("role").asString());
 
-        return new UsernamePasswordAuthenticationToken(user, null, Collections.emptyList());
+        System.out.println(userDto);
+
+        SimpleGrantedAuthority authority = new SimpleGrantedAuthority("ROLE_" + userDto.getRole().toUpperCase());
+        return new UsernamePasswordAuthenticationToken(userDto, null, List.of(authority));
     }
+
+
 
 }
